--- a/.github/workflows/build-openwrt-N1.yml
+++ b/.github/workflows/build-openwrt-N1.yml
@@ -143,7 +143,7 @@ jobs:
       uses: ophub/flippy-openwrt-actions@main
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        KERNEL_VERSION_NAME: 5.15.110_6.1.5
+        KERNEL_VERSION_NAME: 5.15.110_6.1.5_6.6.26
         PACKAGE_SOC: s905d
         SW_FLOWOFFLOAD: 0
         HW_FLOWOFFLOAD: 0
